--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,6 +13,9 @@
             </div>
             <h1>
               <%= @event.title %>
+              <% if @event.only_woman? %>
+                <span class="badge bg-primary ms-2">女性限定</span>
+              <% end %>
             </h1>
             <% if logged_in? %>
               <div class="ms-auto">
