--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -88,6 +88,7 @@
           <div class="text-center">
             <% if logged_in? %>
               <% if !current_user.owner?(@event) %>
+                <% if !@event.only_woman || (@event.only_woman && current_user.woman?) %>
                 <% if current_user.attend?(@event) %>
                   <%= link_to 'キャンセルする',
                               event_attendance_url(@event),
@@ -102,6 +103,7 @@
                               method: :post,
                               data: { confirm: '申し込みます' }
                   %>
+                <% end %>
                 <% end %>
               <% end %>
             <% end %>
